--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HelloWorld</string>
     <string name="strButtonCaption">Click Here!</string>
     <string name="strMessage">Hello!</string>
+    <string name="strSomething">SomeThing!</string>string>
 </resources>
